WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191603
Calling removeTrack on different RTCPeerConnection should throw InvalidAccessError
https://bugs.webkit.org/show_bug.cgi?id=191603
Summary
Calling removeTrack on different RTCPeerConnection should throw InvalidAccess...
youenn fablet
Reported
2018-11-13 15:08:39 PST
Calling removeTrack on different RTCPeerConnection should throw InvalidAccessError
Attachments
Patch
(5.62 KB, patch)
2018-11-13 15:10 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews126 for ios-simulator-wk2
(2.54 MB, application/zip)
2018-11-13 17:31 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews105 for mac-sierra-wk2
(3.13 MB, application/zip)
2018-11-13 17:57 PST
,
EWS Watchlist
no flags
Details
Patch
(8.51 KB, patch)
2018-11-14 06:30 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-11-13 15:10:15 PST
Created
attachment 354707
[details]
Patch
EWS Watchlist
Comment 2
2018-11-13 17:31:42 PST
Comment on
attachment 354707
[details]
Patch
Attachment 354707
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/9979265
New failing tests: fast/mediastream/RTCPeerConnection-add-removeTrack.html
EWS Watchlist
Comment 3
2018-11-13 17:31:44 PST
Created
attachment 354734
[details]
Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 4
2018-11-13 17:57:34 PST
Comment on
attachment 354707
[details]
Patch
Attachment 354707
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9979932
New failing tests: fast/mediastream/RTCPeerConnection-add-removeTrack.html
EWS Watchlist
Comment 5
2018-11-13 17:57:35 PST
Created
attachment 354744
[details]
Archive of layout-test-results from ews105 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
youenn fablet
Comment 6
2018-11-14 06:30:43 PST
Created
attachment 354802
[details]
Patch
Chris Dumez
Comment 7
2018-11-14 08:43:46 PST
Comment on
attachment 354802
[details]
Patch r=me
WebKit Commit Bot
Comment 8
2018-11-14 09:35:10 PST
Comment on
attachment 354802
[details]
Patch Clearing flags on attachment: 354802 Committed
r238180
: <
https://trac.webkit.org/changeset/238180
>
WebKit Commit Bot
Comment 9
2018-11-14 09:35:12 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2018-11-14 09:36:26 PST
<
rdar://problem/46065351
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug