Calling removeTrack on different RTCPeerConnection should throw InvalidAccessError https://bugs.webkit.org/show_bug.cgi?id=191603

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/webrtc/RTCPeerConnection-removeTrack.https-expected.txt:

Source/WebCore:

Make sure to check that the sender peer connection backend is matching.
Covered by rebased WPT test.

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::removeTrack):
* Modules/mediastream/RTCRtpSender.cpp:
(WebCore::RTCRtpSender::isCreatedBy const):
* Modules/mediastream/RTCRtpSender.h:

LayoutTests:

Removed obsolete test.

* fast/mediastream/RTCPeerConnection-add-removeTrack-expected.txt:
* fast/mediastream/RTCPeerConnection-add-removeTrack.html:


Canonical link: https://commits.webkit.org/206384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238180 268f45cc-cd09-0410-ab3c-d52691b4dbfc